<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TemplatesActivity"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/templates_text"
        style="@style/logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/templates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/templates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/templates_text">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/bubbleSort"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="@string/bubble_sort_button" />

            <Button
                android:id="@+id/factorial"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="@string/factorial" />

            <Button
                android:id="@+id/fibonacci"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="@string/fibonacci" />

            <Button
                android:id="@+id/infinityLoop"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="@string/infinity_loop_button" />

            <Button
                android:id="@+id/ahegao"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="@string/ahegao_button" />

            <Button
                android:id="@+id/arrayTest"
                style="@style/custom_button"
                android:layout_marginTop="12dp"
                android:text="Array test" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/savedProgramsText"
        style="@style/logo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/saved_programs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/templates" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savedProgramsText">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/savedPrograms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>