<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#AD2F7C9F"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/block_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:theme="@style/Block"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="139dp"
                    android:layout_height="43dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/output"
                    android:textAlignment="center"
                    android:textColor="#546E7A"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/expression1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.432" />

                <EditText
                    android:id="@+id/expression1"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/expression"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    android:theme="@style/Expression"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:theme="@style/Block"
                    android:id="@+id/block_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/teal_200"
                    >

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="127dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/input"
                        android:textAlignment="center"
                        android:textColor="#546E7A"
                        android:textSize="34sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/expression"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.514" />

                    <EditText
                        android:id="@+id/expression"
                        android:theme="@style/Expression"
                        android:layout_width="240dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:ems="10"
                        android:hint="@string/expression"
                        android:inputType="textPersonName"
                        android:textColorHint="#757575"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/block_init"
                android:theme="@style/Block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/teal_200"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="119dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/init"
                    android:textAlignment="center"
                    android:textColor="#546E7A"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/expression3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/expression3"
                    android:theme="@style/Expression"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/expression"
                    android:inputType="textPersonName"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
</layout>